--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
@@ -12,9 +11,9 @@
     <meta name="theme-color" content="#1e3a8a">
     <link rel="manifest" href="/manifest.json">
     
-    <!-- New Premium Icon (SVG Data URL) -->
-    <link rel="icon" href="data:image/svg+xml,%3Csvg width='512' height='512' viewBox='0 0 512 512' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='512' height='512' rx='110' fill='url(%23g)'/%3E%3Cpath d='M256 120V392M120 256H392' stroke='white' stroke-width='65' stroke-linecap='round'/%3E%3Ccircle cx='256' cy='256' r='55' fill='%231E3A8A' stroke='white' stroke-width='15'/%3E%3Ccircle cx='275' cy='237' r='12' fill='white' fill-opacity='0.7'/%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' y1='0' x2='512' y2='512' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%233B82F6'/%3E%3Cstop offset='1' stop-color='%231E3A8A'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E" />
-    <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg width='512' height='512' viewBox='0 0 512 512' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='512' height='512' rx='110' fill='url(%23g)'/%3E%3Cpath d='M256 120V392M120 256H392' stroke='white' stroke-width='65' stroke-linecap='round'/%3E%3Ccircle cx='256' cy='256' r='55' fill='%231E3A8A' stroke='white' stroke-width='15'/%3E%3Ccircle cx='275' cy='237' r='12' fill='white' fill-opacity='0.7'/%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' y1='0' x2='512' y2='512' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%233B82F6'/%3E%3Cstop offset='1' stop-color='%231E3A8A'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E" />
+    <!-- Premium Icon -->
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <link rel="apple-touch-icon" href="/icon.svg" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
