--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#1e3a8a">
-    <link rel="manifest" href="/manifest.json">
     
-    <!-- Premium Icon -->
+    <!-- Cache-busting no manifesto para forçar atualização do ícone -->
+    <link rel="manifest" href="/manifest.json?v=1.1">
+    
+    <!-- Premium Icons -->
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <link rel="shortcut icon" href="/icon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="/icon.svg" />
 
     <script src="https://cdn.tailwindcss.com"></script>
